--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: lightcyan;
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     margin: 0px;
     margin-bottom: 100px;
     
