--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@ body{
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     margin: 0px;
+    font-family: "Anton SC", sans-serif;
     margin-bottom: 100px;
     
+
+    .chamada{
+        background: blue;
+        margin-top: 80px;
+        margin-bottom: 80px;
+        display: flex;
+        justify-content: center;
+
+    }
 }
