--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body{
         margin-bottom: 80px;
         display: flex;
         justify-content: center;
+    }
+    header{
+        color: blueviolet;
+        font-size: 40px;
+        margin-bottom: 3px;
+        padding: 20px;
 
+    }
+    .chamada-texto{
+        margin-right: 5%;
     }
 }
