--- a/style.css
+++ b/style.css
@@ -1,26 +1,29 @@
-body{
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+background: black;
+    color: rgb(221, 64, 241);
     margin: 0px;
-    font-family: "Anton SC", sans-serif;
     margin-bottom: 100px;
+    font-family: "Roboto", sans-serif;  
     
 
-    .chamada{
-        background: blue;
-        margin-top: 80px;
-        margin-bottom: 80px;
-        display: flex;
-        justify-content: center;
-    }
-    header{
-        color: blueviolet;
-        font-size: 40px;
-        margin-bottom: 3px;
-        padding: 20px;
+    
+}
+.chamada{
+background:rgb(219, 135, 240);
+margin-top: 80px;
+margin-bottom: 80px;
+display: flex;
+justify-content: center;
+}
+header{
+    color:rgb(248, 240, 241);
+    font-size: 40px;
+    margin-bottom: 3px;
+    padding: 20px;
 
-    }
-    .chamada-texto{
-        margin-right: 5%;
-    }
+}
+.chamada-texto{
+     margin-right: 5%;
+}
+h1{
+    font-size: 35px;
 }
